--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
     "mermaid": "^11.8.1",
     "next": "^15.3.5",
     "next-mdx-remote": "^5.0.0",
+    "prismjs": ">=1.30.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-syntax-highlighter": "^15.6.1"
+    "react-syntax-highlighter": "^15.5.0",
+    "refractor": "^5.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "typescript": "^5"
   }
 }
